# japan-trading-agents

./: .gitignore  CHANGELOG.md  README.md  README_ja.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: pdca_score.py
src/japan_trading_agents/: __init__.py  cli.py  config.py  graph.py  llm.py  models.py  notifier.py  server.py  snapshot.py
src/japan_trading_agents/agents/: __init__.py  base.py  event.py  fundamental.py  macro.py  researcher.py  risk.py  sentiment.py  technical.py  trader.py  verifier.py
src/japan_trading_agents/data/: __init__.py  adapters.py  fact_library.py
tests/: conftest.py  test_adapters.py  test_agents.py  test_cli.py  test_config.py  test_fact_library.py  test_graph.py  test_llm.py  test_models.py  test_notifier.py  test_portfolio.py  test_server.py  test_snapshot.py
