[project]
name = "japan-trading-agents"
version = "0.5.2"
description = "Multi-agent AI trading analysis for Japanese stocks — powered by the Japan Finance Data Stack"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "japan", "trading", "agent", "llm", "ai", "stock", "mcp",
    "edinet", "finance", "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.0",
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "yfinance>=0.2",
]

[project.optional-dependencies]
edinet = ["edinet-mcp>=0.6.0"]
tdnet = ["tdnet-disclosure-mcp>=0.1.1"]
estat = ["estat-mcp>=0.2.4"]
all-data = [
    "edinet-mcp>=0.6.0",
    "tdnet-disclosure-mcp>=0.1.1",
    "estat-mcp>=0.2.4",
]
dev = [
    "japan-trading-agents[all-data]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
jta = "japan_trading_agents.cli:cli"

[project.urls]
Homepage = "https://github.com/ajtgjmdjp/japan-trading-agents"
Repository = "https://github.com/ajtgjmdjp/japan-trading-agents"
Issues = "https://github.com/ajtgjmdjp/japan-trading-agents/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".env", ".env.*", ".mcpregistry_*", ".claude/"]

[tool.hatch.build.targets.wheel]
packages = ["src/japan_trading_agents"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["RUF001", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["japan_trading_agents"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["japan_trading_agents"]
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
